Fix tests: remove todo in editMessageMedia, update error descriptions